# Drake_Models

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SPEC.md  conftest.py  drake_issues.json  fix_mypy3.py  issues.txt  mypy2.txt  mypy3.txt  pyproject.toml  test.py  test_drake.py  test_drake_2.py  test_drake_3.py  test_drake_4.py  test_drake_5.py  test_drake_6.py  test_drake_7.py  test_drake_8.py  test_drake_9.py
.github/workflows/: ci-standard.yml  local-only-runner-guard.yml  rust-ci.yml
.jules/: bolt.md
assessments/: 2026-04-26-A-project-organization.md  2026-04-26-B-documentation.md  2026-04-26-C-testing.md  2026-04-26-D-error-handling.md  2026-04-26-E-performance.md  2026-04-26-F-code-quality.md  2026-04-26-G-dependency-hygiene.md  2026-04-26-H-security.md  2026-04-26-I-configuration-management.md  2026-04-26-J-observability.md  2026-04-26-K-maintenance-debt.md  2026-04-26-L-ci-cd.md  2026-04-26-M-deployment.md  2026-04-26-N-legal-and-compliance.md  2026-04-26-O-agentic-usability.md  2026-04-26-comprehensive-assessment.json  2026-04-26-comprehensive-assessment.md  created_issues.json  evidence.json
benchmarks/: README.md  __init__.py  test_benchmark_exercise_models.py  test_sdf_generation.py
docs/adr/: README.md
docs/assessments/: 2026-04-26-a-o-assessment.md  (+23 more)
examples/: generate_all_models.py
rust_core/: Cargo.toml
rust_core/src/: lib.rs
scripts/: check_local_only_workflows.py  setup_dev.py
tests/: test_drake_biomechanics_validation.py
(+89 files in other folders)
